--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,5 @@
 FROM node:alpine as builder
-
-WORKDIR /app
-
+WORKDIR '/app'
 COPY ./package.json ./
 RUN npm install
 COPY . .
@@ -9,5 +7,5 @@ RUN npm run build
 
 FROM nginx
 EXPOSE 3000
-COPY ./nginx/default.conf /etc/nginx/conf.d/default
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 COPY --from=builder /app/build /usr/share/nginx/html
